Fix note-level CodeQL findings across core, oauth2 and doc
- OAuth2Session: fix the missing space in the "ID token could not be
  decoded" message, report a non-numeric expires_in as an OAuth2 server
  error instead of a raw NumberFormatException, and stop shadowing the
  accessTokenResponse field
- ICAPFilter: name the offending field when connect_timeout or
  read_timeout is not a number
- Principal: parse the websocket TTL system property once, falling back
  to the default with a warning when it is not a number
- LdapClient: drop finalize(), which never runs on the singleton
- Heaplets, JsonValues: replace the deprecated Class.newInstance()
- OpenApiMockResponseHandler: replace the deprecated ApiResponses.getDefault()
- MockDataGenerator: generate coordinates as numbers instead of parsing
  locale-formatted strings
- SampleApplication: use SSLContextConfigurator.createSSLContext(true)
  and print the usage on a non-numeric port argument